# pi-maplibre-native-slint-touch

./: Cargo.toml  README.md  build.rs  main.slint
docs/: dance-perf-investigation.md  hdmi-gl-rendering-notes.md
hdmi/: CMakeLists.txt  README.md  gl_map_window.slint  main_gl.cpp  supervisor.py
hdmi/assets/: ATTRIBUTION.md
hdmi/platform/: custom_file_source.cpp  custom_file_source.hpp
hdmi/scripts/: build.sh  deploy.sh  gen-screensaver-tiles.sh  run.sh
hdmi/src/: slint_gl_backend.cpp  slint_gl_backend.hpp  slint_map_gl.cpp  slint_map_gl.hpp
hdmi/systemd/: getty@tty1-autologin.conf  maplibre-slint-gl.service
scripts/: deploy.sh
spi/: Cargo.toml  README.md
spi/patches/: maplibre-native-rs-0.8.2-egl.patch
spi/scripts/: bundle-libs.sh
spi/src/: maplibre.rs
spi/src/ui/: m-map-view.slint
spi/systemd/: maplibre-slint.service
src/: main.rs  maplibre.rs  screensaver.rs
src/maplibre/: headless.rs
src/ui/: m-map-adapter.slint  maplibre.slint
systemd/: maplibre-slint.service
trident/: README.md
trident/experiments/: bench_llama.py  combined_test.py  correct_test.py  correct_test2.py  correct_test3.py  test_whisper.py
trident/pi-hear/: engines.py  pi-hear  pi_hear.py  poi_say.py  romaji_match.py  wake.py
trident/systemd/: pi-hear.service
udev/: 99-ads7846-calib.rules
